ImageService i odgovarajuci endpointi kompletirani